# ChangeLog for dev-python/feedcache
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*feedcache-1.4.1 (31 Jul 2012)

  31 Jul 2012; James Rowe <jnrowe@gmail.com> +feedcache-1.4.1.ebuild,
  metadata.xml:
  Version bump [641].

  14 May 2012; James Rowe <jnrowe@gmail.com> -feedcache-1.3.1.ebuild,
  feedcache-1.4.ebuild:
  Keyworded x86.

  14 May 2012; James Rowe <jnrowe@gmail.com> feedcache-1.4.ebuild:
  Keyworded amd64.

  28 Apr 2012; James Rowe <jnrowe@gmail.com> metadata.xml:
  [QA] Added missing remote-id to metadata.xml.

*feedcache-1.4 (14 Apr 2012)

  14 Apr 2012; James Rowe <jnrowe@gmail.com> +feedcache-1.4.ebuild:
  Version bump [587].

  08 Apr 2012; James Rowe <jnrowe@gmail.com> feedcache-1.3.1.ebuild:
  Switched to python-distutils-ng eclass.

  18 Mar 2012; James Rowe <jnrowe@gmail.com> feedcache-1.3.1.ebuild:
  Switched to EAPI4.

  14 Mar 2012; James Rowe <jnrowe@gmail.com> feedcache-1.3.1.ebuild:
  Use ${PN} in ${HOMEPAGE}.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  21 Mar 2010; James Rowe <jnrowe@gmail.com> feedcache-1.3.1.ebuild:
  Added PYTHON_DEPEND setting.

  14 Feb 2010; James Rowe <jnrowe@gmail.com> feedcache-1.3.1.ebuild:
  Incompatible with python 3.x.

  12 Feb 2010; James Rowe <jnrowe@gmail.com> feedcache-1.3.1.ebuild:
  Keyworded x86.

  12 Feb 2010; James Rowe <jnrowe@gmail.com> feedcache-1.3.1.ebuild:
  Keyworded amd64.

*feedcache-1.3.1 (13 Jan 2010)

  13 Jan 2010; James Rowe <jnrowe@gmail.com> +feedcache-1.3.1.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
