@@ -1,12 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST feedcache-1.4.1.tar.gz 33667 RMD160 0bfdd63be3008b19df0606bc49a6b54ccefd973a SHA1 c94124951a6ddb160c8304fd743d4785f827c922 SHA256 7a2cd702d9640b3a951309ab591cec52bb10a07fd07f7772e11c05874eaf9711
-DIST feedcache-1.4.tar.gz 11373 RMD160 54a592175b9fbea5f035276c01b06184d406337a SHA1 08061d3de38fd80a4e3bf207a7ce55f6126bc0c0 SHA256 28cf65d773fa64ff30ea314fcce3729a090b944232ed4eba623bcd40e44adedf
+DIST feedcache-1.4.1.tar.gz 33667 SHA256 7a2cd702d9640b3a951309ab591cec52bb10a07fd07f7772e11c05874eaf9711 WHIRLPOOL 509bcbbfa6e23e5815002cf476ccb89c8bfc7db66c104d8980fa3762bffc0581b07132b45ba53fa793d2e580ea4235ae2d9390e587d9189dbb2c102a7413308e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAlAik5cACgkQzJrj3cAXR0mXogCfVXTW9nXvtUUREYZSSv//wRc/
-SkIAn2GFJveAIsdWJ7IATxxNQmV8sAko
-=00xL
+iEYEAREIAAYFAlA+vnwACgkQzJrj3cAXR0lC3ACgoJwNk1yimdceMnvIcK3MYqJ5
+PRgAn06A3pAaEtX+1/QGGgLWJ/sSuV8x
+=I5WR
 -----END PGP SIGNATURE-----
