@@ -1,18 +1,0 @@
-# Copyright 1999-2012 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-EAPI=4
-PYTHON_COMPAT="python2_5 python2_6 python2_7"
-
-inherit jnrowe-pypi
-
-DESCRIPTION="Wrapper for the Universal Feed Parser which caches the results"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="amd64 x86"
-IUSE=""
-
-DEPEND=""
-RDEPEND="dev-python/feedparser"
