@@ -184,8 +184,7 @@
  * Licence: ``MIT``
  * Versions:
 
-  * `1.4 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-python/feedcache/feedcache-1.4.ebuild>`__  ``amd64``, ``x86``
-  * `1.4.1 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-python/feedcache/feedcache-1.4.1.ebuild>`__  ``~amd64`` (due 2012-08-30), ``~x86`` (due 2012-08-30)
+  * `1.4.1 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-python/feedcache/feedcache-1.4.1.ebuild>`__  ``~amd64`` (due 2012-08-30), ``x86``
 
 * ``flake8`` - http://pypi.python.org/pypi/flake8/
 
