@@ -14,7 +14,6 @@ REM 2012-08-30 *1 MSG %"Stabilise amd64 dev-python/sure-0.10.4%" %a
 REM 2012-08-30 *1 MSG %"Stabilise amd64 dev-python/tweepy-1.10%" %a
 REM 2012-08-30 *1 MSG %"Stabilise amd64 dev-python/docformatter-0.2.4%" %a
 REM 2012-08-30 *1 MSG %"Stabilise amd64 dev-python/feedcache-1.4.1%" %a
-REM 2012-08-30 *1 MSG %"Stabilise x86 dev-python/feedcache-1.4.1%" %a
 REM 2012-08-30 *1 MSG %"Stabilise amd64 dev-python/prettytable-0.6.1%" %a
 REM 2012-08-30 *1 MSG %"Stabilise x86 dev-python/prettytable-0.6.1%" %a
 REM 2012-08-30 *1 MSG %"Stabilise amd64 dev-python/kitchen-1.1.1%" %a
