@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Aug 2012; James Rowe <jnrowe@gmail.com> -feedcache-1.4.ebuild,
+  feedcache-1.4.1.ebuild:
+  Keyworded x86.
+
 *feedcache-1.4.1 (31 Jul 2012)
 
   31 Jul 2012; James Rowe <jnrowe@gmail.com> +feedcache-1.4.1.ebuild,
